cabal-version:      3.0

name:               hexpandr

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.3.0.0

-- A short (one-line) description of the package.
synopsis: A parser for Expandr

-- A longer description of the package.
description: A parser for Expandr using a small custom parser combinator library

-- The license under which the package is released.
license:            MPL-2.0

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             lrshsl

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         author

-- A copyright notice.
-- copyright:
category:           Language
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

source-repository head
  type:     git
  location: https://github.com/lrshsl/hexpandr

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-language: GHC2021

    exposed-modules:
        Hexpandr,
        Hexpandr.Utils

    other-modules:
        Hexpandr.Parser,
        Hexpandr.PrimitiveParsers,
        Hexpandr.FollowedByParser,
        Hexpandr.Tokens,
        Hexpandr.Ast,

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base ^>=4.17.2.1,
        deepseq >= 1.4.8 && < 1.5,

    hs-source-dirs:   lib

executable hexpandr
    import:           warnings
    default-language: GHC2021

    hs-source-dirs:   app
    main-is:          Main.hs
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base ^>=4.17.2.1,
        hexpandr

executable hexpandr-test
    import:           warnings
    default-language: GHC2021

    hs-source-dirs:   test
    main-is:          Test.hs
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base ^>=4.17.2.1,
        hexpandr

-- vim: et sts=2 ts=2 sw=2 list
